# emoji-release

./: Cargo.toml  readme.md
src/: cargo.rs  derive_next_version.rs  main.rs  npm.rs
